Activate Fav icons.

--- a/controls/src/main/resources/org/tweetwallfx/controls/wordle.css
+++ b/controls/src/main/resources/org/tweetwallfx/controls/wordle.css
@@ -25,7 +25,7 @@
 .wordle {
     -fx-background-color: linear-gradient(to bottom, gray, white 75%);
     -fx-graphic: url(tweetwalllogo.png);
-    -fx-fav-icons-visible: false;
+    -fx-fav-icons-visible: true;
 }
 
 .wordle .tag {
