Farben der retweet und favorite icons gefixt. Retweet wird nur angezeigt, wenn count > 0. Favorite wird nur angezeigt, wenn count > 0. Wenn der tweet ein retweet ist wird vor dem User Icon ein grünes retweet icon angezeigt.

--- a/controls/src/main/resources/org/tweetwallfx/controls/wordle.css
+++ b/controls/src/main/resources/org/tweetwallfx/controls/wordle.css
@@ -46,10 +46,23 @@
 .favoriteCount{
     -glyph-name: "THUMBS_UP";
     -glyph-size: 24px;
+    -fx-fill: #8899A6;   
 }
 
 .retweetCount{
     -glyph-name: "RETWEET";
     -glyph-size: 24px;
+    -fx-fill: #8899A6;   
+}
+
+.retweetBack{
+    -glyph-name: "SQUARE"; 
+    -glyph-size: 24px;    
+    -fx-fill: yellowgreen; 
+}
+.retweetFront{
+    -glyph-name: "RETWEET";
+    -glyph-size: 16px;    
+    -fx-fill: white; 
 }
 
