Introduce background image support, statusline like logging via log4j StringPropertyAppender.

--- a/javaone/src/main/resources/javaone.css
+++ b/javaone/src/main/resources/javaone.css
@@ -28,6 +28,11 @@
     -color-java-orange-uncoated: #ffb838;
 }
 
+.statusline {
+    -fx-font: 12px "Calibri"; 
+    -fx-text-fill: -color-java-blue !important;     
+}
+
 .wordle {
     -fx-background-color: white;
     -fx-graphic: url(JavaOne-vert-clr.png);
