--- a/devoxx-2016/src/main/resources/tweetwall.css
+++ b/devoxx-2016/src/main/resources/tweetwall.css
@@ -42,9 +42,9 @@
 }
 
 .wordle {
-    -fx-background-color: white;
-    -fx-graphic: url(Devoxx-Logo.png);
-    -fx-background-graphic: url(DevoxxBelgium2016v3.jpg);
+    -fx-background-color: black;
+    -fx-graphic: url(Devoxx-Logo-white.png);
+    -fx-background-graphic: url(Devoxx2016CinemaBackdropRightNoText.png);
     -fx-display-tag-num: 25;
     -fx-font: 12pt "BebasNeue";
     -fx-font-size-min: 36;
@@ -53,20 +53,20 @@
     
 }
 .wordle .bg-image {
-    -fx-opacity: 0.3;
+    -fx-opacity: 0.4;
 }
 
 .wordle .logo {
-    visibility: hidden;
-    -fx-scale-x: 0.7;
-    -fx-scale-y: 0.7;
-    -fx-translate-x: -50;
-    -fx-translate-y: -100%;
+    /*visibility: hidden;*/
+/*    -fx-scale-x: 0.7;
+    -fx-scale-y: 0.7;*/
+    -fx-translate-x: +50;
+    -fx-translate-y: -50;
 }
 
 .wordle .tag {
     /*-fx-font-family: "Calibri";*/
-    -fx-fill: black !important;
+    -fx-fill: white !important;
 /*    -fx-stroke: black;
     -fx-stroke-width: 0.5;    */
     /*-fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );*/
@@ -75,11 +75,11 @@
 
 .wordle .name {
     -fx-font-size: 36px; 
-    -fx-text-fill: black; 
+    -fx-text-fill: white; 
     -fx-font-weight: bold;    
 }
 
 .wordle .handle {
     -fx-font-size: 28px;
-    -fx-text-fill: black;   
+    -fx-text-fill: white;   
 }
