Couple of fixes -remove Emoji from cloud -fix updating issue -get rid of unnecessary updates -use larger history to build up cloud -add Emoji font as preparation for supporting Emoji in Tweets -internal cleanup

--- a/devoxx-2016/src/main/resources/tweetwall.css
+++ b/devoxx-2016/src/main/resources/tweetwall.css
@@ -32,6 +32,11 @@
     src: url('BebasNeue-Bold.otf');
 }
 
+@font-face {
+    font-family: 'Noto Emoji';
+    src: url('NotoEmoji-Regular.ttf');
+}
+
 .root {
     /*-fx-font-family: 'BebasNeue';*/ 
 }
