--- a/controls/src/main/resources/org/tweetwallfx/controls/wordle.css
+++ b/controls/src/main/resources/org/tweetwallfx/controls/wordle.css
@@ -55,6 +55,12 @@
     -fx-fill: #8899A6;   
 }
 
+.verifiedAccount{
+    -glyph-name: "CHECK_CIRCLE";
+    -glyph-size: 24px;
+    -fx-fill: #8899A6;   
+}
+
 .retweetBack{
     -glyph-name: "SQUARE"; 
     -glyph-size: 24px;    
