--- a/devoxx-2017-be/cinema/src/main/resources/session.fxml
+++ b/devoxx-2017-be/cinema/src/main/resources/session.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
 
     The MIT License
@@ -24,13 +25,14 @@
     THE SOFTWARE.
  
 -->
+
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane prefHeight="131.0" prefWidth="309.0" style="-fx-background-color: devoxx_gradient; -fx-background-radius: 5;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="131.0" prefWidth="309.0" style="-fx-background-color: devoxx_gradient; -fx-background-radius: 5;" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextFlow layoutY="86.0" maxHeight="-Infinity" maxWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="35.0" prefWidth="301.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
          <children>
@@ -39,7 +41,7 @@
       </TextFlow>
       <TextFlow maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="33.0" prefWidth="209.0" textAlignment="RIGHT" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Text id="speakers" strokeType="OUTSIDE" strokeWidth="0.0" text="Johan Vos, Erwin Morrhey, Joeri Sykora, José Pereda" />
+            <Text id="speakers" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: blanchedalmond;" text="Johan Vos, Erwin Morrhey, Joeri Sykora, José Pereda" />
          </children>
       </TextFlow>
       <Label id="room" layoutX="233.0" layoutY="2.0" style="-fx-font-weight: bold; -fx-font-size: 14pt;" text="Room 10" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
