--- a/voxxed-days-zurich/src/main/resources/tweetwall.css
+++ b/voxxed-days-zurich/src/main/resources/tweetwall.css
@@ -49,14 +49,14 @@
 
 .statusline {
     /*-fx-font: 12px "Calibri";*/ 
-    -fx-text-fill: red !important;     
+    -fx-text-fill: red !important;
 }
 
 .wordle {
-    -fx-graphic: url(Devoxx-Logo-White.png);
-    -fx-background-color: black;
-    -fx-background-graphic: url(vdz18-whiteband.png);
-    -fx-second-graphic: url(jug-bodensee-logo-weiss3-gross.png);
+    -fx-graphic: none;
+    -fx-background-color: none;
+    -fx-background-graphic: url(vdz18-background.png);
+    /* -fx-second-graphic: none;*/
     -fx-display-tag-num: 25;
     /*-fx-font: 12pt "BebasNeue";*/
     -fx-font-size-min: 36;
@@ -65,13 +65,13 @@
     
 }
 .wordle .bg-image {
-    -fx-opacity: 0.4;
+    -fx-opacity: 0.8;
 }
 
 .wordle .secondlogo {
     -fx-scale-x: 0.4;
     -fx-scale-y: 0.4;
-    -fx-background-color: white;    
+    -fx-background-color: white;
     /*position: relative;*/
     /*-fx-alignment: BOTTOM_RIGHT;*/
     /*-fx-translate-x: +900;
