--- a/voxxed-days-zurich/src/main/resources/session.fxml
+++ b/voxxed-days-zurich/src/main/resources/session.fxml
@@ -47,9 +47,7 @@
       <Label id="room" layoutX="233.0" layoutY="2.0" style="-fx-font-weight: bold; -fx-font-size: 14pt;" text="Room 10" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
       <Label id="startTime" layoutX="5.0" layoutY="29.0" text="14:00" />
    </children>
-<!--
    <effect>
-      <DropShadow color="#9a9494" offsetX="2.0" offsetY="2.0" />
+      <DropShadow color="#285285" offsetX="2.0" offsetY="2.0" />
    </effect>
--->
 </AnchorPane>
