--- a/voxxed-days-zurich/src/main/resources/tweetwall.css
+++ b/voxxed-days-zurich/src/main/resources/tweetwall.css
@@ -109,5 +109,5 @@
     -fx-border-insets: 5pt;
     -fx-background-color: devoxx_gradient;
     -fx-background-radius: 10;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+    -fx-effect: dropshadow( three-pass-box , #285285 , 2, 0.0 , 2.0 , 2.0 );
 }
