--- a/devoxx-2018-pl/cinema/src/main/resources/ratedTalk.fxml
+++ b/devoxx-2018-pl/cinema/src/main/resources/ratedTalk.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
 
     The MIT License
 
-    Copyright 2017 TweetWallFX
+    Copyright 2017-2018 TweetWallFX
 
     Permission is hereby granted, free of charge, to any person obtaining a copy
     of this software and associated documentation files (the "Software"), to deal
@@ -15,7 +14,7 @@
 
     The above copyright notice and this permission notice shall be included in
     all copies or substantial portions of the Software.
-    copies of the Software, and to permit persons to whom the Software is
+
     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
     FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -23,9 +22,8 @@
     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
     THE SOFTWARE.
- 
--->
 
+-->
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
